--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-amiigen = { git = "https://github.com/TheDrawingCoder-Gamer/amiigen.git" }
+amiigen = { path = "../amiigen" }
+amiitool-rs = { path = "../amiitool-rs" }
+clap = { version = "3.2.6", features = ["derive"] }
