--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-amiigen = { path = "../amiigen" }
-amiitool-rs = { path = "../amiitool-rs" }
+amiigen = { git = "https://github.com/TheDrawingCoder-Gamer/amiigen.git" }
+amiitool-rs = { git = "https://github.com/TheDrawingCoder-Gamer/amiitool-rs.git" }
 clap = { version = "3.2.6", features = ["derive"] }
