--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-amiitool-rs = { git = "https://github.com/TheDrawingCoder-Gamer/amiitool-rs.git" }
+amiitool-rs = { git = "https://github.com/TheDrawingCoder-Gamer/amiitool-rs" }
 clap = { version = "3.2.6", features = ["derive"] }
